ZCS-10831 : Org Chart | Added manager field attr and drop down in admin consol contact info tab
Org Chart | converted arrow to normal functions and removed optional chaining
Adding the manager field while creating new account as well.
Fixed issue occurred while creating new account with manager field.

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1171,6 +1171,7 @@ NAD_mobile = M\u00f2bil:
 NAD_pager = Cercapersones:
 NAD_company = Empresa:
 NAD_title = T\u00edtol professional:
+NAD_manager = Gerent:
 NAD_facsimileTelephoneNumber = N\u00famero de fax:
 NAD_zimbraPhoneticCompany = Transcripci\u00f3 fon\u00e8tica de l\u2019empresa:
 NAD_city = Ciutat:
