--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1154,6 +1154,7 @@ NAD_mobile = Handy:
 NAD_pager = Pager:
 NAD_company = Firma:
 NAD_title = Position:
+NAD_manager = Manager:
 NAD_facsimileTelephoneNumber = Faxnummer:
 NAD_zimbraPhoneticCompany = Firma (Aussprache):
 NAD_city = Stadt:
