--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1166,7 +1166,8 @@ NAD_homePhone = Etxeko telefonoa
 NAD_mobile = Mugikorra:
 NAD_pager = Bilatu:
 NAD_company = Enpresa:
-NAD_title = Lanbidea
+NAD_title = Lanbidea:
+NAD_manager = Kudeatzailea:
 NAD_facsimileTelephoneNumber = Fax zenbakia:
 NAD_zimbraPhoneticCompany = Enpresaren transkripzio fonetikoa:
 NAD_city = Hiria:
