--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = Cellulaire\u00a0:
 NAD_pager = Pagette\u00a0:
 NAD_company = Soci\u00e9t\u00e9\u00a0:
 NAD_title = Fonction :
+NAD_manager = Directeur:
 NAD_facsimileTelephoneNumber = Num\u00e9ro de t\u00e9l\u00e9copieur :
 NAD_zimbraPhoneticCompany = Soci\u00e9t\u00e9 phon\u00e9tique\u00a0:
 NAD_city = Ville\u00a0:
