--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = Mobilsz\u00e1m:
 NAD_pager = Szem\u00e9lyh\u00edv\u00f3:
 NAD_company = V\u00e1llalat:
 NAD_title = Beoszt\u00e1s:
+NAD_manager = Menedzser:
 NAD_facsimileTelephoneNumber = Faxsz\u00e1m:
 NAD_zimbraPhoneticCompany = V\u00e1llalat fonetikusan:
 NAD_city = V\u00e1ros:
