--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1145,6 +1145,7 @@ NAD_mobile = Cellulare:
 NAD_pager = Cercapersone:
 NAD_company = Azienda:
 NAD_title = Posizione:
+NAD_manager = Manager:
 NAD_facsimileTelephoneNumber = Numero di fax:
 NAD_zimbraPhoneticCompany = Societ\u00e0 (fonetico):
 NAD_city = Citt\u00e0:
