--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1154,6 +1154,7 @@ NAD_mobile = \u643a\u5e2f\uff1a
 NAD_pager = \u30dd\u30b1\u30c3\u30c8\u30d9\u30eb\uff1a
 NAD_company = \u4f1a\u793e\uff1a
 NAD_title = \u5f79\u8077\uff1a
+NAD_manager = \u30de\u30cd\u30b8\u30e3\u30fc\uff1a
 NAD_facsimileTelephoneNumber = \u30d5\u30a1\u30c3\u30af\u30b9\u756a\u53f7\uff1a
 NAD_zimbraPhoneticCompany = \u4f1a\u793e\uff08\u30d5\u30ea\u30ac\u30ca\uff09\uff1a
 NAD_city = \u5e02\u533a\u753a\u6751\uff1a
