--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1153,6 +1153,7 @@ NAD_mobile = \ud734\ub300\ud3f0:
 NAD_pager = \ud638\ucd9c\uae30:
 NAD_company = \ud68c\uc0ac:
 NAD_title = \uc9c1\ud568:
+NAD_manager = \uad00\ub9ac\uc790:
 NAD_facsimileTelephoneNumber = \ud329\uc2a4 \ubc88\ud638:
 NAD_zimbraPhoneticCompany = \ud68c\uc0ac(\ubc1c\uc74c\uc73c\ub85c \uc785\ub825):
 NAD_city = \uad6c/\uad70/\uc2dc:
