--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = Mudah Alih:
 NAD_pager = Alat Kelui:
 NAD_company = Syarikat:
 NAD_title = Jawatan:
+NAD_manager = Pengurus:
 NAD_facsimileTelephoneNumber = Nombor Faks:
 NAD_zimbraPhoneticCompany = Syarikat Fonetik:
 NAD_city = Bandar:
