--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1145,6 +1145,7 @@ NAD_mobile = Mobiel:
 NAD_pager = Semafoon:
 NAD_company = Bedrijf:
 NAD_title = Functie:
+NAD_manager = Manager:
 NAD_facsimileTelephoneNumber = Faxnummer:
 NAD_zimbraPhoneticCompany = Fonetische bedrijfsnaam:
 NAD_city = Stad:
