--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1165,6 +1165,7 @@ NAD_mobile = Kom\u00f3rka:
 NAD_pager = Pager:
 NAD_company = Firma:
 NAD_title = Stanowisko:
+NAD_manager = Mened\u017c\u000aer:
 NAD_facsimileTelephoneNumber = Fax:
 NAD_zimbraPhoneticCompany = Wymowa nazwy firmy:
 NAD_city = Miasto:
