--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -1144,6 +1144,7 @@ NAD_mobile = Celular:
 NAD_pager = Pager:
 NAD_company = Empresa:
 NAD_title = Cargo:
+NAD_manager = Gerente:
 NAD_facsimileTelephoneNumber = N\u00famero de fax:
 NAD_zimbraPhoneticCompany = Empresa (fon\u00e9tica):
 NAD_city = Cidade:
