--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = Mobil:
 NAD_pager = Pager:
 NAD_company = Companie:
 NAD_title = Func\u0163ie:
+NAD_manager = Administrator:
 NAD_facsimileTelephoneNumber = Num\u0103r fax:
 NAD_zimbraPhoneticCompany = Companie fonetic\u0103:
 NAD_city = Ora\u015f:
