--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = Mobilni telefon:
 NAD_pager = Pozivnik:
 NAD_company = Podjetje:
 NAD_title = Delovni naziv:
+NAD_manager = Upravitelj:
 NAD_facsimileTelephoneNumber = Faks \u0161tevilka:
 NAD_zimbraPhoneticCompany = Foneti\u010dni zapis podjetja:
 NAD_city = Kraj:
