--- a/WebRoot/messages/ZaMsg_uk.properties
+++ b/WebRoot/messages/ZaMsg_uk.properties
@@ -1170,6 +1170,7 @@ NAD_mobile = \u041c\u043e\u0431\u0456\u043b\u044c\u043d\u0438\u0439:
 NAD_pager = \u041f\u0435\u0439\u0434\u0436\u0435\u0440:
 NAD_company = \u041a\u043e\u043c\u043f\u0430\u043d\u0456\u044f:
 NAD_title = \u041f\u043e\u0441\u0430\u0434\u0430:
+NAD_manager = \u041c\u0435\u043d\u0435\u0434\u0436\u0435\u0440:
 NAD_facsimileTelephoneNumber = \u041d\u043e\u043c\u0435\u0440 \u0444\u0430\u043a\u0441\u0443:
 NAD_zimbraPhoneticCompany = \u0424\u043e\u043d\u0435\u0442\u0438\u0447\u043d\u0430 \u043a\u043e\u043c\u043f\u0430\u043d\u0456\u044f:
 NAD_city = \u041c\u0456\u0441\u0442\u043e:
