--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1175,6 +1175,7 @@ NAD_mobile = Di \u0111\u1ed9ng:
 NAD_pager = M\u00e1y nh\u1eafn tin:
 NAD_company = C\u00f4ng ty:
 NAD_title = Ch\u1ee9c v\u1ee5:
+NAD_manager = \u004e\u0067\u01b0\u1edd\u0069\u0020\u0071\u0075\u1ea3\u006e\u0020\u006c\u00fd:
 NAD_facsimileTelephoneNumber = S\u1ed1 fax:
 NAD_zimbraPhoneticCompany = Phi\u00ean \u00e2m t\u00ean c\u00f4ng ty:
 NAD_city = Th\u00e0nh ph\u1ed1:
