--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1164,6 +1164,7 @@ NAD_mobile = \u624b\u673a\uff1a
 NAD_pager = \u5bfb\u547c\u673a\uff1a
 NAD_company = \u516c\u53f8\uff1a
 NAD_title = \u5de5\u4f5c\u804c\u52a1:
+NAD_manager = \u7ecf\u7406:
 NAD_facsimileTelephoneNumber = \u4f20\u771f\u53f7\u7801:
 NAD_zimbraPhoneticCompany = \u516c\u53f8\u7684\u62fc\u97f3:
 NAD_city = \u57ce\u5e02\uff1a
