--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -1145,6 +1145,7 @@ NAD_mobile = \u624b\u6a5f\uff1a
 NAD_pager = \u50b3\u547c\u6a5f\uff1a
 NAD_company = \u516c\u53f8\ufe55
 NAD_title = \u8077\u52d9\uff1a
+NAD_manager = \u7d93\u7406
 NAD_facsimileTelephoneNumber = \u50b3\u771f\u865f\u78bc\uff1a
 NAD_zimbraPhoneticCompany = \u516c\u53f8\u7684\u62fc\u97f3\ufe55
 NAD_city = \u57ce\u5e02\ufe55
