--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -1171,6 +1171,7 @@ NAD_mobile = \u884c\u52d5\u96fb\u8a71:
 NAD_pager = \u547c\u53eb\u5668:
 NAD_company = \u516c\u53f8:
 NAD_title = \u8077\u7a31:
+NAD_manager = \u7d93\u7406:
 NAD_facsimileTelephoneNumber = \u50b3\u771f\u865f\u78bc:
 NAD_zimbraPhoneticCompany = \u516c\u53f8\u7684\u62fc\u97f3:
 NAD_city = \u57ce\u5e02:
