--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1145,6 +1145,7 @@ NAD_mobile = Mobil:
 NAD_pager = Persons\u00f8ger:
 NAD_company = Firma:
 NAD_title = Jobtitel:
+NAD_manager = Manager;
 NAD_facsimileTelephoneNumber = Faxnummer:
 NAD_zimbraPhoneticCompany = Fonetisk firma:
 NAD_city = By:
