--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1162,6 +1162,7 @@ NAD_mobile = Mobile:
 NAD_pager = Pager:
 NAD_company = Company:
 NAD_title = Job Title:
+NAD_manager = Manager:
 NAD_facsimileTelephoneNumber = Fax Number:
 NAD_zimbraPhoneticCompany = Phonetic Company:
 NAD_city = City:
