--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1158,6 +1158,7 @@ NAD_mobile = M\u00f3vil:
 NAD_pager = Busca:
 NAD_company = Empresa:
 NAD_title = T\u00edtulo profesional:
+NAD_manager = Gerente:
 NAD_facsimileTelephoneNumber = N\u00famero de fax:
 NAD_zimbraPhoneticCompany = Transcripci\u00f3n fon\u00e9tica de la empresa:
 NAD_city = Ciudad:
