--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1161,6 +1161,7 @@ NAD_mobile = Mobile\u00a0:
 NAD_pager = Pager\u00a0:
 NAD_company = Soci\u00e9t\u00e9\u00a0:
 NAD_title = Fonction :
+NAD_manager = Directeur:
 NAD_facsimileTelephoneNumber = Num\u00e9ro de fax :
 NAD_zimbraPhoneticCompany = Soci\u00e9t\u00e9 phon\u00e9tique\u00a0:
 NAD_city = Ville\u00a0:
