--- a/WebRoot/messages/ZaMsg_hi.properties
+++ b/WebRoot/messages/ZaMsg_hi.properties
@@ -1145,6 +1145,7 @@ NAD_mobile = \u092e\u094b\u092c\u093e\u0907\u0932:
 NAD_pager = \u092a\u0947\u091c\u0930:
 NAD_company = \u0915\u0902\u092a\u0928\u0940:
 NAD_title = \u0915\u093e\u0930\u094d\u092f \u0936\u0940\u0930\u094d\u0937\u0915:
+NAD_manager = \u092a\u094d\u0930\u092c\u0902\u0927\u0915:
 NAD_facsimileTelephoneNumber = \u092b\u093c\u0948\u0915\u094d\u0938 \u0928\u0902\u092c\u0930:
 NAD_zimbraPhoneticCompany = \u092b\u093c\u094b\u0928\u0947\u091f\u093f\u0915 \u0915\u0902\u092a\u0928\u0940:
 NAD_city = \u0936\u0939\u0930:
