--- a/WebRoot/messages/ZaMsg_iw.properties
+++ b/WebRoot/messages/ZaMsg_iw.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = \u05e0\u05d9\u05d9\u05d3:
 NAD_pager = \u05d6\u05d9\u05de\u05d5\u05e0\u05d9\u05ea:
 NAD_company = \u05d7\u05d1\u05e8\u05d4:
 NAD_title = \u05ea\u05e4\u05e7\u05d9\u05d3:
+NAD_manager = \u05de\u05e0\u05d4\u05dc:
 NAD_facsimileTelephoneNumber = \u05de\u05e1\u05e4\u05e8 \u05e4\u05e7\u05e1:
 NAD_zimbraPhoneticCompany = \u05e9\u05dd \u05d7\u05d1\u05e8\u05d4 \u05e4\u05d5\u05e0\u05d8\u05d9:
 NAD_city = \u05e2\u05d9\u05e8:
