--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1172,6 +1172,7 @@ NAD_mobile = \u200b\u0ec0\u0e9a\u0eb5\u200b\u0ea1\u0eb7\u200b\u0e96\u0eb7:
 NAD_pager = \u200b\u0ec0\u0e84\u0eb7\u0ec8\u0ead\u0e87\u0eae\u0eb1\u0e9a\u200b\u0e82\u0ecd\u0ec9\u0e84\u0ea7\u0eb2\u0ea1:
 NAD_company = \u0e9a\u0ecd\u0ea5\u0eb4\u200b\u0eaa\u0eb1\u0e94:
 NAD_title = \u0e95\u0eb3\u200b\u0ec1\u0edc\u0ec8\u200b\u0e87\u0e87\u0eb2\u0e99:
+NAD_manager = \u0e9c\u0eb9\u0ec9\u200b\u0e88\u0eb1\u0e94\u200b\u0e81\u0eb2\u0e99:
 NAD_facsimileTelephoneNumber = \u0e99\u0ec9\u0eb3\u200b\u0ec0\u0e9a\u0eb5\u200b\u0ec1\u0e9f\u0eb1\u0e81:
 NAD_zimbraPhoneticCompany = \u0e9a\u0ecd\u0ea5\u0eb4\u0eaa\u0eb1\u0e94\u0ec2\u0e9f\u0e99\u200b\u0ec0\u0e99\u0e95\u0eb4\u200b\u0e81:
 NAD_city = \u0e95\u0ebb\u0ea7\u200b\u0ec0\u0ea1\u0eb7\u0ead\u0e87:
