--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1175,6 +1175,7 @@ NAD_mobile = Mobil:
 NAD_pager = Persons\u00f8ker:
 NAD_company = Firma:
 NAD_title = Jobbtittel:
+NAD_manager = sjef:
 NAD_facsimileTelephoneNumber = Telefaks:
 NAD_zimbraPhoneticCompany = Firma, fonetisk:
 NAD_city = Poststed:
