--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1175,6 +1175,7 @@ NAD_mobile = Telem\u00f3vel:
 NAD_pager = Pager:
 NAD_company = Empresa:
 NAD_title = Cargo:
+NAD_manager = Gerente:
 NAD_facsimileTelephoneNumber = N\u00famero de fax:
 NAD_zimbraPhoneticCompany = Empresa (fon\u00e9tica):
 NAD_city = Localidade:
