--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1145,6 +1145,7 @@ NAD_mobile = Mobil:
 NAD_pager = Persons\u00f6kare:
 NAD_company = F\u00f6retag:
 NAD_title = Befattning:
+NAD_manager = Chef:
 NAD_facsimileTelephoneNumber = Faxnummer:
 NAD_zimbraPhoneticCompany = Fonetiskt f\u00f6retag:
 NAD_city = Ort:
