--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1175,6 +1175,7 @@ NAD_mobile = \u0bae\u0bca\u0baa\u0bc8\u0bb2\u0bcd:
 NAD_pager = \u0baa\u0bc7\u0b9c\u0bb0\u0bcd:
 NAD_company = \u0ba8\u0bbf\u0bb1\u0bc1\u0bb5\u0ba9\u0bae\u0bcd:
 NAD_title = \u0baa\u0ba3\u0bbf\u0baf\u0bbf\u0ba9\u0bcd \u0baa\u0bc6\u0baf\u0bb0\u0bcd:
+NAD_manager = \u0bae\u0bc7\u0bb2\u0bbe\u0bb3\u0bb0\u0bcd:
 NAD_facsimileTelephoneNumber = \u0b83\u0baa\u0bc7\u0b95\u0bcd\u0bb8\u0bcd \u0b8e\u0ba3\u0bcd:
 NAD_zimbraPhoneticCompany = \u0b83\u0baa\u0bca\u0ba9\u0b9f\u0bbf\u0b95\u0bcd \u0ba8\u0bbf\u0bb1\u0bc1\u0bb5\u0ba9\u0bae\u0bcd:
 NAD_city = \u0ba8\u0b95\u0bb0\u0bae\u0bcd:
