--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1170,6 +1170,7 @@ NAD_mobile = Cep:
 NAD_pager = \u00c7a\u011fr\u0131 Cihaz\u0131:
 NAD_company = \u015eirket:
 NAD_title = \u0130\u015f Unvan\u0131:
+NAD_manager = Y\u00f6netici:
 NAD_facsimileTelephoneNumber = Faks Numaras\u0131:
 NAD_zimbraPhoneticCompany = Fonetik \u015eirket:
 NAD_city = \u015eehir:
