ZCS-11010 : OnlyOffice/Zulip feature configuration management.
Adding "Document Editing" checkbox under "General Features" section for account edit.
Adding "Document Editing" checkbox under "General Features" section for new account.
Adding "Document Editing" checkbox under "General Features" section for COS edit.
Adding "Document Editing" checkbox under "General Features" section for new COS.
Adding "Chat" checkbox under "General Features" section for account edit.
Adding "Chat" checkbox under "General Features" section for new account.
Adding "Chat" checkbox under "General Features" section for COS edit.
Adding "Chat" checkbox under "General Features" section for new COS.

--- a/WebRoot/messages/ZaMsg_ca.properties
+++ b/WebRoot/messages/ZaMsg_ca.properties
@@ -1410,6 +1410,7 @@ LBL_zimbraPublicSharingEnabled = Compartici\u00f3 p\u00fablica
 LBL_zimbraFeatureGalAutoCompleteEnabled = Emplenament autom\u00e0tic des de la llista global d\u2019adreces
 LBL_zimbraFeatureImportFolderEnabled = Importa
 LBL_zimbraFeatureExportFolderEnabled = Exporta
+LBL_zimbraFeatureDocumentEditingEnabled = Edici\u00f3 de documents
 LBL_zimbraDumpsterEnabled = Carpeta abocadora
 MSG_zimbraDumpsterEnabled = Carpeta abocadora
 LBL_zimbraDumpsterUserVisibleAge = Durada de la visibilitat a la carpeta abocadora per a l\u2019usuari final:
@@ -2525,6 +2526,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Interval per desar esborranys autom\u00e0t
 NAD_zimbraSMIMEFeature  = Funcions S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permet a l\u2019usuari final publicar i eliminar certificats S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activar S/MIME
+
+NAD_zimbraChatFeature  = Funcions de xat
+LBL_zimbraFeatureZulipChatEnabled = xat zulip
 
 externalAccountNote = Aquest compte fa servir transport de correu extern
 
