--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -1384,6 +1384,7 @@ LBL_zimbraPublicSharingEnabled = Offentlig deling
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autofuldf\u00f8relse fra GAL
 LBL_zimbraFeatureImportFolderEnabled = Import\u00e9r
 LBL_zimbraFeatureExportFolderEnabled = Eksport\u00e9r
+LBL_zimbraFeatureDocumentEditingEnabled = Dokumentredigering
 LBL_zimbraDumpsterEnabled = Dumpster-mappe
 MSG_zimbraDumpsterEnabled = Dumpster-mappe
 LBL_zimbraDumpsterUserVisibleAge = Varighed af synlighed i dumpster for slutbruger:
@@ -2459,6 +2460,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Interval for automatisk lagring af kladde:
 NAD_zimbraSMIMEFeature = S/MIME-funktioner
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Tillad slutbruger at udgive og fjerne S/MIME-certifikater
 LBL_zimbraFeatureSMIMEEnabled = Aktiver S/MIME
+
+NAD_zimbraChatFeature  = Chat funktioner
+LBL_zimbraFeatureZulipChatEnabled = Zulip chat
 
 externalAccountNote = Denne konto bruger ekstern mailtransport
 
