--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -1393,6 +1393,7 @@ LBL_zimbraPublicSharingEnabled = \u00d6ffentliche Freigabe
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autovervollst\u00e4ndigung aus GAL
 LBL_zimbraFeatureImportFolderEnabled = Importieren
 LBL_zimbraFeatureExportFolderEnabled = Exportieren
+LBL_zimbraFeatureDocumentEditingEnabled = 
 LBL_zimbraDumpsterEnabled = M\u00fcllcontainer
 MSG_zimbraDumpsterEnabled = M\u00fcllcontainer
 LBL_zimbraDumpsterUserVisibleAge = Sichtbarkeitsdauer in M\u00fcllcontainer f\u00fcr Endnutzer:
@@ -2493,6 +2494,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervall zum automatischen Speichern von 
 NAD_zimbraSMIMEFeature = S/MIME-Funktionen
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Dem Endbenutzer erlauben, S/MIME-Zertifikate zu ver\u00f6ffentlichen und zu entfernen
 LBL_zimbraFeatureSMIMEEnabled = S/MIME aktivieren
+
+NAD_zimbraChatFeature  = Chat-Funktionen
+LBL_zimbraFeatureZulipChatEnabled = Zulip Chat
 
 externalAccountNote = Dieser Account nutzt den externen Mailtransport.
 
