--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -1397,6 +1397,7 @@ LBL_zimbraPublicSharingEnabled = Elementos compartidos p\u00fablicos
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autocompletado desde GAL
 LBL_zimbraFeatureImportFolderEnabled = Importar
 LBL_zimbraFeatureExportFolderEnabled = Exportar
+LBL_zimbraFeatureDocumentEditingEnabled = Edici\u00f3n de documentos
 LBL_zimbraDumpsterEnabled = Carpeta contenedora
 MSG_zimbraDumpsterEnabled = Carpeta contenedora
 LBL_zimbraDumpsterUserVisibleAge = Vigencia de visibilidad en la carpeta contenedora para el usuario final:
@@ -2503,6 +2504,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervalo de almacenamiento autom\u00e1tic
 NAD_zimbraSMIMEFeature = Funciones S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permiten al usuario final publicar y eliminar certificados S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activar S/MIME
+
+NAD_zimbraChatFeature  = Funciones de chat
+LBL_zimbraFeatureZulipChatEnabled = Chat de Zulip
 
 externalAccountNote = Esta cuenta utiliza el transporte de correo externo
 
