--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -1406,6 +1406,7 @@ LBL_zimbraPublicSharingEnabled = Banatutako elementu publikoak
 LBL_zimbraFeatureGalAutoCompleteEnabled = HZOretiko autoosaketa
 LBL_zimbraFeatureImportFolderEnabled = Inportatu
 LBL_zimbraFeatureExportFolderEnabled = Esportatu
+LBL_zimbraFeatureDocumentEditingEnabled = Dokumentuen edizioa
 LBL_zimbraDumpsterEnabled = Edukiontzi-karpeta
 MSG_zimbraDumpsterEnabled = Edukiontzi-karpeta
 LBL_zimbraDumpsterUserVisibleAge = Ikusgaitasunaren jadanekotasuna azken erabiltzailearentzako edukiontzi-karpetan:
@@ -2520,6 +2521,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Borradoreen bilketa automatiko tartea:
 NAD_zimbraSMIMEFeature = S/MIME funtzioak
 LBL_zimbraFeatureManageSMIMECertificateEnabled = S/MIME ziurtagiriak publikatzea eta ezabatzea baimentzen diote azken erabiltzaileari.
 LBL_zimbraFeatureSMIMEEnabled = S/MIME aktibatu
+
+NAD_zimbraChatFeature  = Txataren Ezaugarriak
+LBL_zimbraFeatureZulipChatEnabled = zulip berriketa
 
 externalAccountNote = Kontu honek kanpo postako garraioa erabiltzen du
 
