--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -1400,6 +1400,7 @@ LBL_zimbraPublicSharingEnabled = Partage public
 LBL_zimbraFeatureGalAutoCompleteEnabled = Saisie automatique \u00e0 partir de la liste GAL\u00a0
 LBL_zimbraFeatureImportFolderEnabled = Importer
 LBL_zimbraFeatureExportFolderEnabled = Exporter
+LBL_zimbraFeatureDocumentEditingEnabled = 
 LBL_zimbraDumpsterEnabled = Dossier benne
 MSG_zimbraDumpsterEnabled = Dossier benne
 LBL_zimbraDumpsterUserVisibleAge = Dur\u00e9e de vie de la visibilit\u00e9 dans la benne pour l\u2019utilisateur final\u00a0:
@@ -2504,6 +2505,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervalle d\u2019enregistrement automatiq
 NAD_zimbraSMIMEFeature = Fonctions S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Autoriser l\u2019utilisateur final \u00e0 publier et supprimer les certificats S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activer S/MIME
+
+NAD_zimbraChatFeature  = Fonctionnalit\u00e9s de chat
+LBL_zimbraFeatureZulipChatEnabled = Chat Zulip
 
 externalAccountNote = Ce compte utilise un protocole de transport de mail externe
 
