--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -1411,6 +1411,7 @@ LBL_zimbraPublicSharingEnabled = Partage public
 LBL_zimbraFeatureGalAutoCompleteEnabled = Saisie automatique \u00e0 partir de la LAG 
 LBL_zimbraFeatureImportFolderEnabled = Importer
 LBL_zimbraFeatureExportFolderEnabled = Exporter
+LBL_zimbraFeatureDocumentEditingEnabled = \u00c9dition de documents
 LBL_zimbraDumpsterEnabled = Dossier benne
 MSG_zimbraDumpsterEnabled = Dossier benne
 LBL_zimbraDumpsterUserVisibleAge = Dur\u00e9e de vie de la visibilit\u00e9 dans la benne pour l\u2019utilisateur final\u00a0:
@@ -2529,6 +2530,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervalle d\u2019enregistrement automatiq
 NAD_zimbraSMIMEFeature = Fonctions S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Autoriser l\u2019utilisateur final \u00e0 publier et \u00e0 supprimer les certificats S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activer S/MIME
+
+NAD_zimbraChatFeature  = Fonctionnalit\u00e9s de chat
+LBL_zimbraFeatureZulipChatEnabled = Chat Zulip
 
 externalAccountNote = Ce compte utilise un protocole de transport de courriel externe
 
