--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -1411,6 +1411,7 @@ LBL_zimbraPublicSharingEnabled = Perkongsian awam
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autolengkap daripada GAL
 LBL_zimbraFeatureImportFolderEnabled = Import
 LBL_zimbraFeatureExportFolderEnabled = Eksport
+LBL_zimbraFeatureDocumentEditingEnabled = Penyuntingan Dokumen
 LBL_zimbraDumpsterEnabled = Folder tong pengangkut
 MSG_zimbraDumpsterEnabled = Folder tong pengangkut
 LBL_zimbraDumpsterUserVisibleAge = Jangka hayat kebolehlihatan dalam tong pengangkut untuk pengguna akhir:
@@ -2529,6 +2530,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Selang autosimpan draf:
 NAD_zimbraSMIMEFeature = Ciri S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Benarkan pengguna akhir untuk menerbitkan dan mengalih keluar sijil S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Dayakan S/MIME
+
+NAD_zimbraChatFeature  = Ciri Sembang
+LBL_zimbraFeatureZulipChatEnabled = Sembang Zulip
 
 externalAccountNote = Akaun ini menggunakan pengangkutan mel luaran
 
