--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -1384,6 +1384,7 @@ LBL_zimbraPublicSharingEnabled = Publiek delen
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autom. invullen op basis van Alg. adreslijst
 LBL_zimbraFeatureImportFolderEnabled = Importeren
 LBL_zimbraFeatureExportFolderEnabled = Exporteren
+LBL_zimbraFeatureDocumentEditingEnabled = Document bewerken
 LBL_zimbraDumpsterEnabled = Afvalmap
 MSG_zimbraDumpsterEnabled = Afvalmap
 LBL_zimbraDumpsterUserVisibleAge = Duur dat item zichtbaar is in afvalmap voor eindgebruiker:
@@ -2459,6 +2460,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Interval voor automatisch opslaan van conc
 NAD_zimbraSMIMEFeature = S/MIME-functies
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Eindgebruiker toestaan om S/MIME-certificaten te publiceren en te verwijderen
 LBL_zimbraFeatureSMIMEEnabled = S/MIME inschakelen
+
+NAD_zimbraChatFeature  = Chatfuncties
+LBL_zimbraFeatureZulipChatEnabled = Zulip-chat
 
 externalAccountNote = Deze account gebruikt extern e-mailtransport
 
