--- a/WebRoot/messages/ZaMsg_no.properties
+++ b/WebRoot/messages/ZaMsg_no.properties
@@ -1414,6 +1414,7 @@ LBL_zimbraPublicSharingEnabled = Offentlig deling
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autofullf\u00f8ring fra GAL
 LBL_zimbraFeatureImportFolderEnabled = Importer
 LBL_zimbraFeatureExportFolderEnabled = Eksporter
+LBL_zimbraFeatureDocumentEditingEnabled = Dokumentredigering
 LBL_zimbraDumpsterEnabled = Avfallscontainermappe
 MSG_zimbraDumpsterEnabled = Avfallscontainermappe
 LBL_zimbraDumpsterUserVisibleAge = Synlighet i avfallscontainermappe for sluttbruker:
@@ -2534,6 +2535,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervall for automatisk lagring av kladd:
 NAD_zimbraSMIMEFeature  = S/MIME-funksjoner
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Tillat at sluttbruker publiserer og fjerner S/MIME-sertifikater
 LBL_zimbraFeatureSMIMEEnabled = Aktiver S/MIME
+
+NAD_zimbraChatFeature  = Chat-funksjoner
+LBL_zimbraFeatureZulipChatEnabled = Zulipchat
 
 externalAccountNote = Denne kontoen bruker ekstern e-posttransport
 
