--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -1404,6 +1404,7 @@ LBL_zimbraPublicSharingEnabled = Udost\u0119pnianie publiczne
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autouzupe\u0142nianie GLA
 LBL_zimbraFeatureImportFolderEnabled = Importuj
 LBL_zimbraFeatureExportFolderEnabled = Eksportuj
+LBL_zimbraFeatureDocumentEditingEnabled = Edycja dokumentu
 LBL_zimbraDumpsterEnabled = Folder kosza
 MSG_zimbraDumpsterEnabled = Folder kosza
 LBL_zimbraDumpsterUserVisibleAge = Okres widoczno\u015bci w koszu dla u\u017cytkownika ko\u0144cowego:
@@ -2518,6 +2519,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Interwa\u0142 automatycznego zapisu kopii 
 NAD_zimbraSMIMEFeature = Funkcje S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Pozw\u00f3l u\u017cytkownikowi ko\u0144cowemu publikowa\u0107 i usuwa\u0107 certyfikaty S/MIME
 LBL_zimbraFeatureSMIMEEnabled = W\u0142\u0105cz S/MIME
+
+NAD_zimbraChatFeature  = Funkcje czatu
+LBL_zimbraFeatureZulipChatEnabled = Czat Zulip
 
 externalAccountNote = To konto korzysta z zewn\u0119trznego transportu poczty
 
