--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -1414,6 +1414,7 @@ LBL_zimbraPublicSharingEnabled = Partilha p\u00fablica
 LBL_zimbraFeatureGalAutoCompleteEnabled = Concluir automaticamente a partir da GAL
 LBL_zimbraFeatureImportFolderEnabled = Importar
 LBL_zimbraFeatureExportFolderEnabled = Exportar
+LBL_zimbraFeatureDocumentEditingEnabled = Edi\u00e7\u00e3o de documentos
 LBL_zimbraDumpsterEnabled = Pasta de lixo
 MSG_zimbraDumpsterEnabled = Pasta de lixo
 LBL_zimbraDumpsterUserVisibleAge = Tempo de vida de visibilidade no lixo para o utilizador final:
@@ -2534,6 +2535,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervalo de grava\u00e7\u00e3o autom\u00e
 NAD_zimbraSMIMEFeature  = Funcionalidades das S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permitir que o utilizador final publique e remova certificados dw S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Ativar S/MIME
+
+NAD_zimbraChatFeature  = Recursos de bate-papo
+LBL_zimbraFeatureZulipChatEnabled = Chat Zulip
 
 externalAccountNote = Esta conta utiliza um transporte de correio externo
 
