--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -1411,6 +1411,7 @@ LBL_zimbraPublicSharingEnabled = Partajare public\u0103
 LBL_zimbraFeatureGalAutoCompleteEnabled = Completare automat\u0103 din GAL
 LBL_zimbraFeatureImportFolderEnabled = Import
 LBL_zimbraFeatureExportFolderEnabled = Export
+LBL_zimbraFeatureDocumentEditingEnabled = Editarea documentelor
 LBL_zimbraDumpsterEnabled = Folder-dumpster
 MSG_zimbraDumpsterEnabled = Folder dumpster
 LBL_zimbraDumpsterUserVisibleAge = Durata vizibilit\u0103\u0163ii \u00een dumpster pentru utilizatorul final:
@@ -2529,6 +2530,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Interval de salvare automat\u0103 ciorn\u0
 NAD_zimbraSMIMEFeature = Caracteristici S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Permite utilizatorului final s\u0103 publice \u015fi s\u0103 elimine certificatele S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Activare S/MIME
+
+NAD_zimbraChatFeature  = Func\u021bii de chat
+LBL_zimbraFeatureZulipChatEnabled = Zulip chat
 
 externalAccountNote = Acest cont folose\u015fte transportul mesajelor externe
 
