--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -1411,6 +1411,7 @@ LBL_zimbraPublicSharingEnabled = Javna skupna raba
 LBL_zimbraFeatureGalAutoCompleteEnabled = Samodejno dokon\u010danje iz GAL
 LBL_zimbraFeatureImportFolderEnabled = Uvozi
 LBL_zimbraFeatureExportFolderEnabled = Izvozi
+LBL_zimbraFeatureDocumentEditingEnabled = Urejanje dokumentov
 LBL_zimbraDumpsterEnabled = Mapa za za\u010dasno shrambo izbrisanih sporo\u010dil
 MSG_zimbraDumpsterEnabled = Mapa za za\u010dasno shrambo izbrisanih sporo\u010dil
 LBL_zimbraDumpsterUserVisibleAge = Trajanje vidljivosti v za\u010dasni shrambi zbrisanih sporo\u010dil za kon\u010dnega uporabnika:
@@ -2529,6 +2530,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Interval samodejnega shranjevanja osnutka:
 NAD_zimbraSMIMEFeature = S/MIME funkcije
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Kon\u010dnemu uporabniku dovoli objavljanje in odstranjevanje S/MIME certifikatov
 LBL_zimbraFeatureSMIMEEnabled = Omogo\u010di S/MIME
+
+NAD_zimbraChatFeature  = Funkcije klepeta
+LBL_zimbraFeatureZulipChatEnabled = Zulip klepet
 
 externalAccountNote = Ta ra\u010dun uporablja zunanji prenos po\u0161te
 
