--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -1384,6 +1384,7 @@ LBL_zimbraPublicSharingEnabled = Offentlig delning
 LBL_zimbraFeatureGalAutoCompleteEnabled = Komplettera automatiskt fr\u00e5n global adresslista
 LBL_zimbraFeatureImportFolderEnabled = Importera
 LBL_zimbraFeatureExportFolderEnabled = Exportera
+LBL_zimbraFeatureDocumentEditingEnabled = Dokumentredigering
 LBL_zimbraDumpsterEnabled = Papperskorgsmapp
 MSG_zimbraDumpsterEnabled = Papperskorgsmapp
 LBL_zimbraDumpsterUserVisibleAge = Synlighetstid i papperskorg f\u00f6r slutanv\u00e4ndare:
@@ -2459,6 +2460,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervall f\u00f6r automatsparande av utka
 NAD_zimbraSMIMEFeature = S/MIME-funktioner
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Till\u00e5t slutanv\u00e4ndaren att publicera och ta bort S/MIME-certifikat
 LBL_zimbraFeatureSMIMEEnabled = Aktivera S/MIME
+
+NAD_zimbraChatFeature  = Chattfunktioner
+LBL_zimbraFeatureZulipChatEnabled = Zulipchatt
 
 externalAccountNote = Extern e-posttransport anv\u00e4nds f\u00f6r det h\u00e4r kontot
 
