--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -1409,6 +1409,7 @@ LBL_zimbraPublicSharingEnabled = Ortak payla\u015f\u0131m
 LBL_zimbraFeatureGalAutoCompleteEnabled = GAL\u2019den otomatik tamamla
 LBL_zimbraFeatureImportFolderEnabled = \u0130\u00e7eri Aktar
 LBL_zimbraFeatureExportFolderEnabled = D\u0131\u015far\u0131 Aktar
+LBL_zimbraFeatureDocumentEditingEnabled = Belge D\u00fczenleme
 LBL_zimbraDumpsterEnabled = \u00c7\u00f6p kutusu klas\u00f6r\u00fc
 MSG_zimbraDumpsterEnabled = \u00c7\u00f6p kutusu klas\u00f6r\u00fc
 LBL_zimbraDumpsterUserVisibleAge = Son kullan\u0131c\u0131 i\u00e7in \u00e7\u00f6p kutusundaki g\u00f6r\u00fcn\u00fcrl\u00fck s\u00fcresi:
@@ -2523,6 +2524,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Tasla\u011f\u0131 otomatik olarak kaydetme
 NAD_zimbraSMIMEFeature = S/MIME \u00d6zellikleri
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Son kullan\u0131c\u0131n\u0131n S/MIME sertifikalar\u0131 yay\u0131nlamas\u0131na ve kald\u0131rmas\u0131na izin ver
 LBL_zimbraFeatureSMIMEEnabled = S/MIME\u2019yi etkinle\u015ftir
+
+NAD_zimbraChatFeature  = Sohbet \u00d6zellikleri
+LBL_zimbraFeatureZulipChatEnabled = Zulip sohbet
 
 externalAccountNote = Bu hesap, d\u0131\u015f posta aktar\u0131m\u0131 kullan\u0131yor
 
