--- a/WebRoot/messages/ZaMsg_vi.properties
+++ b/WebRoot/messages/ZaMsg_vi.properties
@@ -1414,6 +1414,7 @@ LBL_zimbraPublicSharingEnabled = Chia s\u1ebb c\u00f4ng khai
 LBL_zimbraFeatureGalAutoCompleteEnabled = T\u1ef1 \u0111\u1ed9ng ho\u00e0n th\u00e0nh t\u1eeb GAL
 LBL_zimbraFeatureImportFolderEnabled = Nh\u1eadp
 LBL_zimbraFeatureExportFolderEnabled = Xu\u1ea5t
+LBL_zimbraFeatureDocumentEditingEnabled = Ch\u1ec9nh s\u1eeda t\u00e0i li\u1ec7u
 LBL_zimbraDumpsterEnabled = Th\u01b0 m\u1ee5c th\u00f9ng r\u00e1c
 MSG_zimbraDumpsterEnabled = Th\u01b0 m\u1ee5c th\u00f9ng r\u00e1c
 LBL_zimbraDumpsterUserVisibleAge = Th\u1eddi gian hi\u1ec3n th\u1ecb trong th\u00f9ng r\u00e1c cho ng\u01b0\u1eddi d\u00f9ng cu\u1ed1i:
@@ -2534,6 +2535,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Kho\u1ea3ng th\u1eddi gian t\u1ef1 \u0111\
 NAD_zimbraSMIMEFeature  = T\u00ednh n\u0103ng S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Cho ph\u00e9p ng\u01b0\u1eddi d\u00f9ng cu\u1ed1i \u0111\u0103ng t\u1ea3i v\u00e0 x\u00f3a ch\u1ee9ng ch\u1ec9 S/MIME
 LBL_zimbraFeatureSMIMEEnabled = B\u1eadt S/MIME:
+
+NAD_zimbraChatFeature  = T\u00ednh n\u0103ng tr\u00f2 chuy\u1ec7n
+LBL_zimbraFeatureZulipChatEnabled = Tr\u00f2 chuy\u1ec7n Zulip
 
 externalAccountNote = T\u00e0i kho\u1ea3n n\u00e0y s\u1eed d\u1ee5ng d\u1ecbch v\u1ee5 v\u1eadn chuy\u1ec3n th\u01b0 b\u00ean ngo\u00e0i
 
