--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -1403,6 +1403,7 @@ LBL_zimbraPublicSharingEnabled = \u516c\u5171\u5171\u4eab
 LBL_zimbraFeatureGalAutoCompleteEnabled = \u4ece GAL \u81ea\u52a8\u5b8c\u6210
 LBL_zimbraFeatureImportFolderEnabled = \u5bfc\u5165
 LBL_zimbraFeatureExportFolderEnabled = \u5bfc\u51fa
+LBL_zimbraFeatureDocumentEditingEnabled = \u6587\u6863\u7f16\u8f91
 LBL_zimbraDumpsterEnabled = \u201c\u5783\u573e\u7bb1\u201d\u6587\u4ef6\u5939
 MSG_zimbraDumpsterEnabled = \u5783\u573e\u7bb1\u6587\u4ef6\u5939
 LBL_zimbraDumpsterUserVisibleAge = \u6700\u7ec8\u7528\u6237\u7684\u5783\u573e\u7bb1\u53ef\u89c1\u5ea6\u5b58\u6d3b\u65f6\u95f4:
@@ -2514,6 +2515,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = \u8349\u7a3f\u81ea\u52a8\u4fdd\u5b58\u65f6
 NAD_zimbraSMIMEFeature = S/MIME \u529f\u80fd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u5141\u8bb8\u6700\u7ec8\u7528\u6237\u53d1\u5e03\u548c\u79fb\u9664 S/MIME \u8bc1\u4e66
 LBL_zimbraFeatureSMIMEEnabled = \u542f\u7528 S/MIME
+
+NAD_zimbraChatFeature  = \u804a\u5929\u529f\u80fd
+LBL_zimbraFeatureZulipChatEnabled = Zulip\u804a\u5929
 
 externalAccountNote = \u6b64\u5e10\u6237\u4f7f\u7528\u5916\u90e8\u90ae\u4ef6\u4f20\u8f93
 
