--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -1410,6 +1410,7 @@ LBL_zimbraPublicSharingEnabled = \u516c\u5171\u5171\u7528
 LBL_zimbraFeatureGalAutoCompleteEnabled = \u5f9e GAL \u81ea\u52d5\u5b8c\u6210
 LBL_zimbraFeatureImportFolderEnabled = \u532f\u5165
 LBL_zimbraFeatureExportFolderEnabled = \u532f\u51fa
+LBL_zimbraFeatureDocumentEditingEnabled = \u6587\u6a94\u7de8\u8f2f
 LBL_zimbraDumpsterEnabled = \u66ab\u653e\u8cc7\u6599\u593e
 MSG_zimbraDumpsterEnabled = \u66ab\u653e\u8cc7\u6599\u593e
 LBL_zimbraDumpsterUserVisibleAge = \u4e00\u822c\u4f7f\u7528\u8005\u7684\u66ab\u653e\u53ef\u898b\u5ea6\u5b58\u7559\u671f:
@@ -2527,6 +2528,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = \u8349\u7a3f\u81ea\u52d5\u5132\u5b58\u9593
 NAD_zimbraSMIMEFeature = S/MIME \u529f\u80fd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u5141\u8a31\u4e00\u822c\u4f7f\u7528\u8005\u767c\u4f48\u548c\u79fb\u9664 S/MIME \u6191\u8b49
 LBL_zimbraFeatureSMIMEEnabled = \u555f\u7528 S/MIME
+
+NAD_zimbraChatFeature  = \u804a\u5929\u529f\u80fd
+LBL_zimbraFeatureZulipChatEnabled = Zulip\u804a\u5929
 
 externalAccountNote = \u6b64\u5e33\u6236\u4f7f\u7528\u5916\u90e8\u90f5\u4ef6\u50b3\u8f38
 
