--- a/WebRoot/messages/ZaMsg_en_AU.properties
+++ b/WebRoot/messages/ZaMsg_en_AU.properties
@@ -1401,6 +1401,7 @@ LBL_zimbraPublicSharingEnabled = Public sharing
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autocomplete from GAL
 LBL_zimbraFeatureImportFolderEnabled = Import
 LBL_zimbraFeatureExportFolderEnabled = Export
+LBL_zimbraFeatureDocumentEditingEnabled = Document Editing
 LBL_zimbraDumpsterEnabled = Dumpster folder
 MSG_zimbraDumpsterEnabled = Dumpster folder
 LBL_zimbraDumpsterUserVisibleAge = Visibility lifetime in dumpster for end user:
@@ -2519,6 +2520,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Draft auto save interval:
 NAD_zimbraSMIMEFeature = S/MIME Features
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Allow end user to publish and remove S/MIME certificates
 LBL_zimbraFeatureSMIMEEnabled = Enable S/MIME
+
+NAD_zimbraChatFeature  = Chat Features
+LBL_zimbraFeatureZulipChatEnabled = Chat
 
 externalAccountNote = This account uses external mail transport
 
