--- a/WebRoot/messages/ZaMsg_hr.properties
+++ b/WebRoot/messages/ZaMsg_hr.properties
@@ -1417,6 +1417,7 @@ LBL_zimbraPublicSharingEnabled = Public sharing
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autocomplete from GAL
 LBL_zimbraFeatureImportFolderEnabled = Import
 LBL_zimbraFeatureExportFolderEnabled = Export
+LBL_zimbraFeatureDocumentEditingEnabled = Ure\u0111ivanje dokumenata
 LBL_zimbraDumpsterEnabled = Dumpster folder
 MSG_zimbraDumpsterEnabled = Dumpster folder
 LBL_zimbraDumpsterUserVisibleAge = Visibility lifetime in dumpster for end user:
@@ -2541,6 +2542,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Draft auto save interval:
 NAD_zimbraSMIMEFeature  = S/MIME Features
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Allow end user to publish and remove S/MIME certificates
 LBL_zimbraFeatureSMIMEEnabled = Enable S/MIME
+
+NAD_zimbraChatFeature  = Zna\u010dajke chata
+LBL_zimbraFeatureZulipChatEnabled = Zulip chat
 
 externalAccountNote = This account uses external mail transport
 
