--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -1384,6 +1384,7 @@ LBL_zimbraPublicSharingEnabled = Condivisione pubblica
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autocompletamento da GAL
 LBL_zimbraFeatureImportFolderEnabled = Importa
 LBL_zimbraFeatureExportFolderEnabled = Esporta
+LBL_zimbraFeatureDocumentEditingEnabled = Modifica dei documenti
 LBL_zimbraDumpsterEnabled = Cartella dumpster
 MSG_zimbraDumpsterEnabled = Cartella dumpster
 LBL_zimbraDumpsterUserVisibleAge = Durata visibilit\u00e0 in cestino per l\u2019utente finale:
@@ -2459,6 +2460,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Intervallo di salvataggio automatico bozza
 NAD_zimbraSMIMEFeature = Funzioni S/MIME
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Consenti all\u2019utente finale di pubblicare e rimuovere certificati S/MIME
 LBL_zimbraFeatureSMIMEEnabled = Abilita S/MIME
+
+NAD_zimbraChatFeature  = Funzionalit\u00e0 di chat
+LBL_zimbraFeatureZulipChatEnabled = Chat Zulip
 
 externalAccountNote = Questo account utilizza il trasporto posta esterno
 
