--- a/WebRoot/messages/ZaMsg_ja.properties
+++ b/WebRoot/messages/ZaMsg_ja.properties
@@ -1393,6 +1393,7 @@ LBL_zimbraPublicSharingEnabled = \u516c\u958b\u5171\u6709
 LBL_zimbraFeatureGalAutoCompleteEnabled = GAL\u306e\u30aa\u30fc\u30c8\u30b3\u30f3\u30d7\u30ea\u30fc\u30c8
 LBL_zimbraFeatureImportFolderEnabled = \u30a4\u30f3\u30dd\u30fc\u30c8
 LBL_zimbraFeatureExportFolderEnabled = \u30a8\u30af\u30b9\u30dd\u30fc\u30c8
+LBL_zimbraFeatureDocumentEditingEnabled = \u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u7de8\u96c6
 LBL_zimbraDumpsterEnabled = \u30b4\u30df\u7bb1\u30d5\u30a9\u30eb\u30c0
 MSG_zimbraDumpsterEnabled = \u30b4\u30df\u7bb1\u30d5\u30a9\u30eb\u30c0
 LBL_zimbraDumpsterUserVisibleAge = \u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u304c\u30b4\u30df\u7bb1\u306e\u5185\u5bb9\u3092\u8868\u793a\u3067\u304d\u308b\u6709\u52b9\u671f\u9593\uff1a
@@ -2483,6 +2484,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = \u4e0b\u66f8\u304d\u3068\u3057\u3066\u81ea
 NAD_zimbraSMIMEFeature = S/MIME\u306e\u6a5f\u80fd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u304cS/MIME\u8a3c\u660e\u66f8\u3092\u516c\u958b/\u524a\u9664\u3059\u308b\u306e\u3092\u8a31\u53ef\u3059\u308b
 LBL_zimbraFeatureSMIMEEnabled = S/MIME\u3092\u6709\u52b9\u306b\u3059\u308b
+
+NAD_zimbraChatFeature  = \u30c1\u30e3\u30c3\u30c8\u6a5f\u80fd
+LBL_zimbraFeatureZulipChatEnabled = Zulip\u30c1\u30e3\u30c3\u30c8
 
 externalAccountNote = \u3053\u306e\u30a2\u30ab\u30a6\u30f3\u30c8\u306f\u5916\u90e8\u30e1\u30fc\u30eb\u30c8\u30e9\u30f3\u30b9\u30dd\u30fc\u30c8\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059
 
