--- a/WebRoot/messages/ZaMsg_ko.properties
+++ b/WebRoot/messages/ZaMsg_ko.properties
@@ -1392,6 +1392,7 @@ LBL_zimbraPublicSharingEnabled = \uacf5\uac1c \uacf5\uc720
 LBL_zimbraFeatureGalAutoCompleteEnabled = GAL\ub85c\ubd80\ud130 \uc790\ub3d9\uc644\uc131
 LBL_zimbraFeatureImportFolderEnabled = \uac00\uc838\uc624\uae30
 LBL_zimbraFeatureExportFolderEnabled = \ub0b4\ubcf4\ub0b4\uae30
+LBL_zimbraFeatureDocumentEditingEnabled = \ubb38\uc11c \ud3b8\uc9d1
 LBL_zimbraDumpsterEnabled = \ud734\uc9c0\ud1b5 \ud3f4\ub354
 MSG_zimbraDumpsterEnabled = \ud734\uc9c0\ud1b5 \ud3f4\ub354
 LBL_zimbraDumpsterUserVisibleAge = \ucd5c\uc885 \uc0ac\uc6a9\uc790\uc758 \ud734\uc9c0\ud1b5\uc5d0\uc11c \ud45c\uc2dc\ud560 \uc9c0\uc18d \uc2dc\uac04:
@@ -2472,6 +2473,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = \uc784\uc2dc \ubcf4\uad00\ud568 \uc790\ub3
 NAD_zimbraSMIMEFeature = S/MIME \uae30\ub2a5
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \ucd5c\uc885 \uc0ac\uc6a9\uc790\uc758 S/MIME \uc778\uc99d\uc11c \uac8c\uc2dc \ubc0f \uc81c\uac70 \ud5c8\uc6a9
 LBL_zimbraFeatureSMIMEEnabled = S/MIME \uc0ac\uc6a9
+
+NAD_zimbraChatFeature  = \ucc44\ud305 \uae30\ub2a5
+LBL_zimbraFeatureZulipChatEnabled = Zulip \ucc44\ud305
 
 externalAccountNote = \uc774 \uacc4\uc815\uc740 \uc678\ubd80 \uba54\uc77c \uc804\uc1a1\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 
