--- a/WebRoot/messages/ZaMsg_lo.properties
+++ b/WebRoot/messages/ZaMsg_lo.properties
@@ -1411,6 +1411,7 @@ LBL_zimbraPublicSharingEnabled = \u0e81\u0eb2\u0e99\u200b\u0ec1\u0ea5\u0e81\u0e9
 LBL_zimbraFeatureGalAutoCompleteEnabled = \u200b\u0eaa\u0eb3\u200b\u0ec0\u0ea5\u0eb1\u0e94\u200b\u0ec2\u0e94\u0e8d\u200b\u0ead\u0eb1\u0e94\u0e95\u0eb0\u200b\u0ec2\u0e99\u200b\u0ea1\u0eb1\u0e94\u200b\u0e88\u0eb2\u0e81 GAL
 LBL_zimbraFeatureImportFolderEnabled = \u0e99\u0eb3\u0ec0\u0e82\u0ebb\u0ec9\u0eb2
 LBL_zimbraFeatureExportFolderEnabled = \u0eaa\u0ebb\u0ec8\u0e87\u0ead\u0ead\u0e81
+LBL_zimbraFeatureDocumentEditingEnabled = \u0e81\u0eb2\u0e99\u0ec1\u0e81\u0ec9\u0ec4\u0e82\u0ec0\u0ead\u0e81\u0eb0\u0eaa\u0eb2\u0e99
 LBL_zimbraDumpsterEnabled = \u0ec2\u0e9f\u0e99\u0ec0\u0e94\u0eb5\u0ec9 \u0e94\u0eb2\u0ea1\u0eaa\u0eb0\u0ec0\u0e95\u0eb5\u0ec9
 MSG_zimbraDumpsterEnabled = \u0ec2\u0e9f\u0e99\u0ec0\u0e94\u0eb5\u0ec9 \u0e94\u0eb2\u0ea1\u0eaa\u0eb0\u0ec0\u0e95\u0eb5\u0ec9
 LBL_zimbraDumpsterUserVisibleAge = \u0ead\u0eb2\u200b\u0e8d\u0eb8\u0e81\u0eb2\u0e99\u200b\u200b\u200b\u200b\u200b\u0e97\u0eb5\u0ec8\u0ec0\u0e9a\u0eb4\u0ec8\u0e87\u0ec0\u0eab\u0eb1\u0e99\u0ea2\u0eb9\u0ec8\u200b\u0ec3\u0e99\u200b\u0ec2\u0e9f\u0e99\u200b\u0ec0\u0e94\u0eb5\u0ec9\u0e96\u0eb1\u0e87\u200b\u0e82\u0eb5\u0ec9\u200b\u0ec0\u0eab\u0e8d\u0eb7\u0ec9\u0ead\u200b\u0eaa\u0eb3\u0ea5\u0eb1\u0e9a\u200b\u0e9c\u0eb9\u0ec9\u200b\u0ec3\u0e8a\u0ec9\u200b\u0e9b\u0eb2\u0e8d\u0e97\u0eb2\u0e87:
@@ -2529,6 +2530,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = \u0e8a\u0ec8\u0ea7\u0e87\u0ec0\u0ea7\u0ea5
 NAD_zimbraSMIMEFeature = \u0e84\u0eb8\u0e99\u0ea5\u0eb1\u0e81\u0eaa\u0eb0\u0e99\u0eb0 S/MIME 
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u0ead\u0eb0\u0e99\u0eb8\u0e8d\u0eb2\u0e94\u0e9c\u0eb9\u0ec9\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99\u0e88\u0eb4\u0e87\u0e9e\u0eb4\u0ea1 \u0eab\u0ebc\u0eb7 \u0ea5\u0ebb\u0e9a\u0ec3\u0e9a\u0ea2\u0eb1\u0ec9\u0e87\u0ea2\u0eb7\u0e99 S/MIME
 LBL_zimbraFeatureSMIMEEnabled = \u0ec0\u0e9b\u0eb5\u0e94\u0ec3\u0e8a\u0ec9\u0e87\u0eb2\u0e99 S/MIME
+
+NAD_zimbraChatFeature  = \u0e84\u0eb8\u0e99\u0eaa\u0ebb\u0ea1\u0e9a\u0eb1\u0e94\u0e81\u0eb2\u0e99\u0eaa\u0ebb\u0e99\u0e97\u0eb0\u0e99\u0eb2
+LBL_zimbraFeatureZulipChatEnabled = \u0e81\u0eb2\u0e99\u0eaa\u0ebb\u0e99\u0e97\u0eb0\u0e99\u0eb2 Zulip
 
 externalAccountNote = \u0e9a\u0eb1\u0e99\u0e8a\u0eb5\u0e99\u0eb5\u0ec9\u0e99\u0eb3\u0ec3\u0e8a\u0ec9\u0e81\u0eb2\u0e99\u0e82\u0ebb\u0e99\u0eaa\u0ebb\u0ec8\u0e87\u0e88\u0ebb\u0e94\u0edd\u0eb2\u0e8d\u0e88\u0eb2\u0e81\u0e9e\u0eb2\u0e8d\u0e99\u0ec9\u0ead\u0e87 
 
