--- a/WebRoot/messages/ZaMsg_ta.properties
+++ b/WebRoot/messages/ZaMsg_ta.properties
@@ -1414,6 +1414,7 @@ LBL_zimbraPublicSharingEnabled = \u0baa\u0bca\u0ba4\u0bc1\u0baa\u0bcd \u0baa\u0b
 LBL_zimbraFeatureGalAutoCompleteEnabled = GAL\u0b87\u0bb2\u0bcd \u0b87\u0bb0\u0bc1\u0ba8\u0bcd\u0ba4\u0bc1 \u0ba4\u0bbe\u0ba9\u0bbe\u0b95 \u0bae\u0bc1\u0b9f\u0bbf\u0b95\u0bcd\u0b95\u0baa\u0bcd\u0baa\u0b9f\u0bcd\u0b9f\u0bb5\u0bc8
 LBL_zimbraFeatureImportFolderEnabled = \u0b8f\u0bb1\u0bcd\u0bb1\u0bc1
 LBL_zimbraFeatureExportFolderEnabled = \u0b8f\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0ba4\u0bbf \u0b9a\u0bc6\u0baf\u0bcd
+LBL_zimbraFeatureDocumentEditingEnabled = \u0b86\u0bb5\u0ba3 \u0ba4\u0bbf\u0bb0\u0bc1\u0ba4\u0bcd\u0ba4\u0bae\u0bcd
 LBL_zimbraDumpsterEnabled = Dumpster \u0b95\u0bcb\u0baa\u0bcd\u0baa\u0bc1\u0bb1\u0bc8
 MSG_zimbraDumpsterEnabled = Dumpster \u0b95\u0bcb\u0baa\u0bcd\u0baa\u0bc1\u0bb1\u0bc8
 LBL_zimbraDumpsterUserVisibleAge = \u0b95\u0b9f\u0bc8\u0b9a\u0bbf \u0baa\u0baf\u0ba9\u0bb0\u0bcd dumpster \u0b90 \u0b95\u0bbe\u0ba3\u0bcd\u0baa\u0ba4\u0bb1\u0bcd\u0b95\u0bbe\u0ba9 \u0b95\u0bbe\u0bb2 \u0b85\u0bb3\u0bb5\u0bc1:
@@ -2534,6 +2535,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = \u0bb5\u0bb0\u0bc8\u0bb5\u0bc8\u0ba4\u0bcd
 NAD_zimbraSMIMEFeature  = S/MIME \u0b85\u0bae\u0bcd\u0b9a\u0b99\u0bcd\u0b95\u0bb3\u0bcd
 LBL_zimbraFeatureManageSMIMECertificateEnabled = \u0b87\u0bb1\u0bc1\u0ba4\u0bbf\u0baa\u0bcd \u0baa\u0baf\u0ba9\u0bb0\u0bc8 S/MIME \u0b9a\u0bbe\u0ba9\u0bcd\u0bb1\u0bbf\u0ba4\u0bb4\u0bcd\u0b95\u0bb3\u0bc8 \u0bb5\u0bc6\u0bb3\u0bbf\u0baf\u0bbf\u0b9f \u0bae\u0bb1\u0bcd\u0bb1\u0bc1\u0bae\u0bcd \u0b85\u0b95\u0bb1\u0bcd\u0bb1 \u0b85\u0ba9\u0bc1\u0bae\u0ba4\u0bbf\u0b95\u0bcd\u0b95\u0bc1\u0bae\u0bcd
 LBL_zimbraFeatureSMIMEEnabled = S/MIME \u0b87\u0baf\u0b95\u0bcd\u0b95\u0bc1
+
+NAD_zimbraChatFeature  = \u0b85\u0bb0\u0b9f\u0bcd\u0b9f\u0bc8 \u0b85\u0bae\u0bcd\u0b9a\u0b99\u0bcd\u0b95\u0bb3\u0bcd
+LBL_zimbraFeatureZulipChatEnabled = \u0b9c\u0bc2\u0bb2\u0bbf\u0baa\u0bcd \u0b85\u0bb0\u0b9f\u0bcd\u0b9f\u0bc8
 
 externalAccountNote = \u0b87\u0ba8\u0bcd\u0ba4\u0b95\u0bcd \u0b95\u0ba3\u0b95\u0bcd\u0b95\u0bc1 \u0bb5\u0bc6\u0bb3\u0bbf\u0baa\u0bcd\u0baa\u0bc1\u0bb1 \u0bae\u0bbf\u0ba9\u0bcd\u0ba9\u0b9e\u0bcd\u0b9a\u0bb2\u0bcd \u0baa\u0bcb\u0b95\u0bcd\u0b95\u0bc1\u0bb5\u0bb0\u0ba4\u0bcd\u0ba4\u0bc8\u0baa\u0bcd \u0baa\u0baf\u0ba9\u0bcd\u0baa\u0b9f\u0bc1\u0ba4\u0bcd\u0ba4\u0bc1\u0b95\u0bbf\u0bb1\u0ba4\u0bc1
 
