ZCS-11484: UI strings added for add/remove domain/cos

--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -1225,6 +1225,8 @@ NAD_AddAlias = Add alias
 NAD_AddAddress = Add address
 NAD_RemoveAlias = Remove
 NAD_RemoveAddress = Remove
+NAD_AddCOS = Add COS
+NAD_AddDomain = Add Domain
 NAD_CheckFeaturesInfo = Check features to enable them for this account
 
 TABT_MBX = Mailbox Quota
